--- a/app/assets/stylesheets/_articles.css.scss
+++ b/app/assets/stylesheets/_articles.css.scss
@@ -68,20 +68,33 @@
 			font-size: .9em;
 			color: $light;
 			margin: 0;
+			color: $color4;
 		}
 		h1{
 			margin: 0;
+			color: $color5;
 		}
 	}
 	h2{
 		font-size: 1.9em;
 		font-style: bold;
 	}
-		hr{
-			margin: 2em auto;
-		}
+	hr{
+		margin: 2em auto;
+	}
 }
 
+.article_content{
+		background-color: $color2;
+		
+		.img_article{
+			background-color: $color4;
+		}
+		.article_patron{
+			background-color: $color4;
+		}
+}
+	
 #share_box{
 	text-align: center;
 	p{
@@ -103,13 +116,14 @@
 }
 
 .article-actions{
+	text-align: center;
 	a{
 		padding: .75em 1em;
 		margin: 0 .5em;
 		border-radius: .15em;
 		line-height: 20px;
 		text-decoration: none;
-		background-color: $white;
+		color: $color2;
 		font-weight: 700;
 		font-size: .7em;
 		font-style: normal;
