añadir usuario crea

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,9 +4,10 @@
     		<div class="post">
   				<p class="date"><%= article.created_at.strftime("%A, %b, %d") %></p>
   				<h2><%= link_to article.titulo, article_path(article) %></h2>
+  				<small>Creado por: <%= article.user.username if article.user %> </small>
   				<div class="article-actions">
 						<%= link_to "Edit this article" , edit_article_path(article) %>
-						<%= link_to "Delete this article" , articles_path(article), method: :delete,
+						<%= link_to "Delete this article" , article_path(article), method: :delete,
 						data: {confirm: "Are you sure?"}
 						%>
 					</div>
