--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -15,7 +15,7 @@
 				<div class="article-actions">
 					<%= link_to "Edit this article" , edit_article_path(@article) %>
 					<%= link_to "View all articles" , articles_path %>
-					<%= link_to "Delete this article" , articles_path(@article), method: :delete,
+					<%= link_to "Delete this article" , article_path(@article), method: :delete,
 					data: {confirm: "Are you sure?"}
 					
 					%>
