--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -152,3 +152,11 @@ p,ul,ol{
 		}
 	}
 }
+
+
+.form_signup{
+	background-color: $color2;
+	padding-top: 40px;
+	padding-bottom: 40px;
+	border-radius: 40px;
+}
