--- a/app/assets/stylesheets/_articles.css.scss
+++ b/app/assets/stylesheets/_articles.css.scss
@@ -128,8 +128,8 @@
 		font-size: .7em;
 		font-style: normal;
 		&:hover{
-			background: $highlight;
-			color: $white;
+			background: $color2;
+			color: $color3;
 			text-decoration: none;
 		}
 	}
