--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -160,3 +160,18 @@ p,ul,ol{
 	padding-bottom: 40px;
 	border-radius: 40px;
 }
+.avatar{
+	width: 100%;
+	border: 3px solid $border;
+}
+h1{
+	font-size: 2.3em;
+	text-transform: uppercase;
+	color:$color5;
+}
+.inicio{
+	width: 80%;
+	margin-left: auto;
+	margin-right: auto;
+	padding-top: 30px;
+}
