--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -17,7 +17,7 @@ pre {
   padding: 10px;
   font-size: 11px;
 }
-
+/*
 a {
   color: #000;
 
@@ -29,6 +29,7 @@ a {
     color: #fff;
   }
 }
+*/
 
 div {
   &.field, &.actions {
