--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -4,12 +4,14 @@
   	<p class="date"><%= article.created_at.strftime("%A, %b, %d") %></p>
   	<h2><%= link_to article.titulo, article_path(article) %></h2>
   	<small>Creado por: <%= article.user.username if article.user %> </small>
-  	<div class="article-actions">
-			<%= link_to "Edit this article" , edit_article_path(article) %>
-			<%= link_to "Delete this article" , article_path(article), method: :delete,
-			data: {confirm: "Are you sure?"}
-			%>
-		</div>
+  	<% if logged_in? && current_user == article.user %>
+	  	<div class="article-actions">
+				<%= link_to "Edit this article" , edit_article_path(article) %>
+				<%= link_to "Delete this article" , article_path(article), method: :delete,
+				data: {confirm: "Are you sure?"}
+				%>
+			</div>
+		<% end %>
 		<hr>
   </div>
   <% end %>
