--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -12,6 +12,7 @@
 			</div>
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
+					
 					<li>
 						<%= link_to "Personajes", articles_path %>
 					</li>
@@ -21,6 +22,18 @@
 					<li>
 						<a href="#">Contacto</a>
 					</li>
+					<% if logged_in? %>
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+						aria-expanded="false">Your profile <span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><%= link_to "Nuevo", new_article_path %></li>
+							<li><%= link_to "Edit your profile", edit_user_path(current_user) %> </li>
+							<li><%= link_to "View your profile", user_path(current_user) %> </li>
+							<li><%= link_to "Log out", logout_path, method: :delete %></li>
+						</ul>
+					</li>
+					<% end %>
 				</ul>
 			</div>
 		</div>
