--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -30,7 +30,7 @@
 				</div>
 				<hr>
 				<div class="article-actions">
-					<% if logged_in? && current_user == @article.user %>
+					<% if logged_in? && (current_user == @article.user || current_user.admin? ) %>
 						<%= link_to "Edit this article" , edit_article_path(@article) %>
 						<%= link_to "View all articles" , articles_path %>
 						<%= link_to "Delete this article" , article_path(@article), method: :delete,
