--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -25,7 +25,7 @@
 					<% if logged_in? %>
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-						aria-expanded="false">Your profile <span class="caret"></span></a>
+						aria-expanded="false"> <%= current_user.username %> <%= "*" if current_user.admin? %><span class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li><%= link_to "Nuevo", new_article_path %></li>
 							<li><%= link_to "Edit your profile", edit_user_path(current_user) %> </li>
