--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -236,3 +236,13 @@ padding-left: 0;
 		}
 	}
 }
+
+.tituloCategoria{
+	text-align: center;
+	a{
+		color: $color5;
+	}
+	a, a:hover{
+		text-decoration: none;
+	}
+}
