--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -22,6 +22,17 @@
 					<li>
 						<a href="#">Contacto</a>
 					</li>
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" 
+						role="button" aria-haspopup="true" aria-expanded="false">Categories <span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><%= link_to "All Categories", categories_path %></li>
+							<% Category.all.each do |category| %>
+							<li><%= link_to "#{category.name}", category_path(category) %></li>
+							<% end %>
+						</ul>
+					</li>
+
 					<% if logged_in? %>
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
@@ -30,6 +41,7 @@
 							<li><%= link_to "Nuevo", new_article_path %></li>
 							<li><%= link_to "Edit your profile", edit_user_path(current_user) %> </li>
 							<li><%= link_to "View your profile", user_path(current_user) %> </li>
+							<li><%= link_to "Nueva Categoría",  new_category_path %> </li>
 							<li><%= link_to "Log out", logout_path, method: :delete %></li>
 						</ul>
 					</li>
