--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -26,6 +26,16 @@
         <%= f.text_area :patron, rows: 10, class: "form-control", placeholder: "Contenido del articulo", autofocus: true%>
       </div>
     </div>
+    
+    <div class="form-group">
+      <div class="row">
+        <div class="control-label col-xs-8 col-xs-offset-2">
+          <%= f.collection_check_boxes :category_ids, Category.all, :id, :name do |cb| %>
+            <% cb.label(class: "checkbox-inline input_checkbox") { cb.check_box(class: "checkbox") + cb.text} %>
+          <% end %>
+        </div>
+      </div>
+    </div>
     <div class="form-group">
       <div class="control-label col-sm-10">
         <%= f.submit class: 'btn btn-primary btn-lg' %>
