--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,5 +1,5 @@
 <h1 align="center">Categorías</h1>
-<%= will_paginate %> 
+
 <% @categories.each do |category| %>
   <ul class="listing">
     <div class="row">
@@ -7,7 +7,10 @@
         <li class="tituloCategoria">
           <%= link_to "#{category.name}", category_path(category) %> 
         </li>
+        <li align="center"><small ><%= pluralize(category.articles.count, "Artículo") %></small></li>
       </div>
     </div>
   </ul>
 <% end %>
+
+<%= will_paginate %> 
