--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -174,6 +174,8 @@ p,ul,ol{
 	padding-top: 40px;
 	padding-bottom: 40px;
 	border-radius: 40px;
+	margin-bottom: 20px;
+	margin-top: 20px;
 }
 .avatar{
 	width: 100%;
