--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,3 +1,8 @@
 <h1 id="page_title"><%= @category.name %></h1>
+<% if logged_in? and current_user.admin? %>
+<div class="row" align="center">
+  [<span class="badge"><%= link_to "Editar nombre de categoría", edit_category_path(@category) %></span>]
+</div>
+<% end %>
 <%= render 'articles/article', obj: @category_articles %>
 <%= will_paginate @category_articles %>
