--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -3,6 +3,8 @@
 @import "colors";
 @import "pygments";
 
+@grid-float-breakpoint = 700px;
+
 body{
   font-family:"Raleway";
 }
@@ -16,13 +18,14 @@ body{
 }
 #logo {
   float: left;
-  font-size: 1.7em;
+  font-size: 1.7vw;
   color: $superlight;
   //text-transform: uppercase;
   letter-spacing: -1px;
   font-weight: bold;
 }
-
+.navbar-brand{
+}
 #logo:hover{
   color: $light;
   text-decoration: none;
