Eliminar usuarios y about

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,9 +5,9 @@
 </div>
 <div class="containerX wrapper_padding clearfix">
 			<div class="col-md-6 about homepage_content">
-				<h2>About</h2>
+				<h2>Byllegurumi</h2>
 				<hr>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut egestas sem eget metus pharetra, nec volutpat justo varius. Vivamus ac leo quam. Etiam sit amet dapibus risus. Sed ornare dui nulla viverra porttitor ac id n.</p><p>Duis lacinia leo mauris, sed pharetra ligula ultrices at. Curabitur lectus ex, laoreet eget molestie et, bibendum volutpat lacus. Praesent et risus quam. Maecenas et odio nec odio efficitur cida ligula, a semper leo nisi vel felis. Nullam pretium tincidunt nulla a luctus.</p>
+				<p>Hermosos personajes tejidos a mano ( Adorno personal o como recordatorio de respirar, sonreír y hacer una pausa ).</p>
 
 			</div>
 			<div class="col-md-3 homepage_content articlesList">
